# lexisub

./: .gitignore  NOTICE  README.md  USER_GUIDE.ko.md  lexisub.spec  pyproject.toml
.github/workflows/: build-app.yml
demos/: README.md
demos/glossaries/: bjj.csv  general.csv  striking.csv
lexisub/: config.py  main.py
lexisub/core/: audio.py  glossary.py  muxer.py  pdf_extractor.py  pipeline.py  stt.py  subtitle.py  translator.py
lexisub/db/: repository.py  schema.sql
lexisub/gui/: glossary_tab.py  main_window.py  pdf_tab.py  styles.py  subtitle_editor.py  term_edit_dialog.py  video_tab.py
mma_sub/: config.py  main.py
mma_sub/core/: glossary.py  muxer.py  pipeline.py  stt.py  translator.py
mma_sub/db/: repository.py  schema.sql
mma_sub/gui/: glossary_tab.py  main_window.py  video_tab.py
scripts/: build_app.sh  extract_pdf.py  ocr_pdf.py  run_demo.py
tests/: USER_STORIES.md  conftest.py
tests/fixtures/: glossary.csv  sample.srt
tests/integration/: test_audio.py  test_muxer.py  test_pdf_extraction.py  test_pipeline.py  test_stt.py  test_translator.py
tests/unit/: test_config.py  test_glossary.py  test_glossary_tab.py  test_main_window.py  test_pdf_extractor.py  test_pdf_tab.py  test_repository.py  test_subtitle.py  test_subtitle_editor.py  test_translator_chunking.py  test_video_tab.py
