[project]
name = "mma-sub"
version = "0.1.0"
description = "Local MMA video subtitle tool with PDF-driven glossary"
requires-python = ">=3.12,<3.13"
dependencies = [
  "PySide6>=6.7",
  "mlx-whisper>=0.4",
  "mlx-lm>=0.20",
  "loguru>=0.7",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-qt>=4.4",
  "pytest-mock>=3.14",
]

[project.scripts]
mma-sub = "mma_sub.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mma_sub"]

[tool.pytest.ini_options]
markers = [
  "heavy: integration tests that download models (>1GB) and run on real hardware",
]
addopts = "-ra -m 'not heavy'"

[tool.hatch.build.targets.wheel.force-include]
"mma_sub/db/schema.sql" = "mma_sub/db/schema.sql"
