[project]
name = "lexisub"
version = "0.1.0"
description = "Local desktop app: video subtitles in Korean with custom glossary support"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Sung-Yeol Yun" }]
requires-python = ">=3.12,<3.13"
dependencies = [
  "PySide6>=6.7",
  "mlx-whisper>=0.4",
  "mlx-lm>=0.20",
  "loguru>=0.7",
  "platformdirs>=4.2",
  "pymupdf>=1.24",
  "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-qt>=4.4",
  "pytest-mock>=3.14",
  "pyinstaller>=6.10",
]

[project.scripts]
lexisub = "lexisub.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lexisub"]

[tool.pytest.ini_options]
markers = [
  "heavy: integration tests that download models (>1GB) and run on real hardware",
]
addopts = "-ra -m 'not heavy'"

[tool.hatch.build.targets.wheel.force-include]
"lexisub/db/schema.sql" = "lexisub/db/schema.sql"
